search-types: Fix overlapping of bullets points in advanced search
Fixed overlapping of bullets points in advanced search by adding margin to <li> (overriding default)

Bug: T205177

--- a/resources/style.css
+++ b/resources/style.css
@@ -958,3 +958,7 @@ p.profile-update-unit {
 div.profile-tab {
 	margin-bottom: 5px;
 }
+
+div.search-types li {
+	margin-left: 24px;
+}
